--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,11 @@
-/* @font-face {
-	font-family: "NeueZierSchrift";
-	src: url("./NeueZierSchrift.ttf") format("truetype");
-	font-weight: 100;
-	font-style: normal;
-} */
+@font-face {
+	font-family: "RundeckTexture";
+	src: url("./RundeckTexture.otf");
+}
+@font-face {
+	font-family: "BobbyJones";
+	src: url("./BobbyJonesSoft.otf");
+}
 
 :root {
 	--primary-light: #fefefe;
@@ -20,13 +22,15 @@ body {
 	margin: 0 !important;
 	padding: 0 !important;
 }
+
 /* Header */
 .headerContainer {
 	height: 5vh;
 	width: 100%;
+	font-family: "BobbyJones";
 }
-.links {
-}
+/* .links {
+} */
 .link__item {
 	margin: 1rem;
 	color: white;
@@ -36,15 +40,19 @@ body {
 .active {
 	border-bottom: 3px solid white;
 }
+
 /* Main */
 .mainContainer {
 	min-height: 90vh;
 	width: 100vw;
+	contain: strict;
+	overflow: auto;
 	border-top: 5px solid white;
 	border-bottom: 5px solid white;
 	background-image: url("./img/home_image.jpg");
 	background-size: cover;
 }
+
 /* Footer */
 .footerContainer {
 	height: 2vh;
@@ -59,29 +67,38 @@ body {
 	margin-right: 0.25rem;
 	color: var(--primary-light);
 }
+
 /* Home Page */
 .homeContainer {
 	height: 100%;
 	width: 100%;
 }
 .home__header {
-	width: 90%;
+	width: 50%;
 	position: absolute;
 	top: 25%;
 	left: 5%;
 	background-color: #004225;
 	color: white;
 	border-radius: 0.5rem;
-	/* font-family: "NeueZierSchrift" !important; */
 	font-size: 2rem;
 	letter-spacing: 0.25rem;
 	text-align: center;
 }
+.main__header {
+	margin: 0.5rem;
+	font-family: "RundeckTexture";
+}
+.sub__header {
+	margin: 0.5rem;
+	font-family: "BobbyJones";
+}
+
 /* Food Page */
 .foodContainer {
 	width: 100%;
-	contain: content;
-	overflow: auto;
+	/* contain: content !important;
+	overflow: auto !important; */
 }
 .appetizersHeader,
 .entreeHeader,
@@ -96,6 +113,7 @@ body {
 	color: white;
 	background-color: #004225;
 	border-radius: 0.5rem;
+	font-family: "BobbyJones";
 	font-size: 2em;
 	text-align: center;
 }
@@ -129,6 +147,7 @@ body {
 	text-align: center;
 }
 .foodTitle {
+	font-family: "BobbyJones";
 	font-weight: bold;
 }
 .foodDescription {
@@ -160,6 +179,7 @@ body {
 	color: white;
 	background-color: #004225;
 	border-radius: 0.5rem;
+	font-family: "BobbyJones";
 	font-size: 2em;
 	text-align: center;
 }
@@ -173,21 +193,59 @@ body {
 	text-align: center;
 }
 .beerTitle {
+	font-family: "BobbyJones";
 	font-weight: bold;
 }
-.beerType {
-}
+/* .beerType {
+} */
 .beerDescription {
 	font-style: italic;
 	margin-bottom: 8px;
 }
-.beerPercentage {
-}
+/* .beerPercentage {
+} */
 .bottleCard {
 	height: 4rem;
 	width: 10rem;
 	margin: 0.5rem;
 	background-color: rgba(256, 256, 256, 0.8);
+}
+
+/* About */
+.aboutContainer {
+	display: flex;
+	justify-self: center;
+	align-self: center;
+	width: 80%;
+	height: 80%;
+	margin: 2rem;
+	padding: 2rem;
+	background-color: rgba(256, 256, 256, 0.8);
+	border-radius: 0.5rem;
+}
+.about__header {
+	width: 100%;
+	font-family: "BobbyJones";
+	font-size: 3rem;
+	text-align: center;
+}
+.about__body {
+	flex-direction: row;
+	text-align: center;
+}
+.about__location,
+.about__hours,
+.about__contact {
+	margin: 1rem;
+}
+.about__title {
+	font-family: "BobbyJones";
+	font-size: 1.5rem;
+	font-weight: bold;
+}
+.about__text {
+	margin: 0.5rem;
+	font-weight: 700;
 }
 
 @media screen and (max-width: 480px) {
@@ -202,9 +260,23 @@ body {
 		margin: 0.75rem 0;
 	}
 	.home__header {
-		width: 100%;
-		left: 0;
+		width: 70%;
+		left: 15%;
+		/* font-size: 1.5rem; */
+	}
+	.main__header {
+		font-size: 2.5rem;
+	}
+	.sub__header {
 		font-size: 1.5rem;
+	}
+	.about__location,
+	.about__hours,
+	.about__contact {
+		margin: 1rem;
+	}
+	.about__body {
+		flex-direction: column;
 	}
 }
 @media screen and (min-width: 481px) and (max-width: 768px) {
@@ -220,16 +292,29 @@ body {
 		border-bottom: 3px solid white;
 	}
 	.home__header {
-		width: 60%;
+		width: 40%;
 		position: absolute;
 		top: 25%;
-		left: 20%;
+		left: 30%;
 		border-radius: 0.5rem;
 		font-size: 1.5rem;
 	}
 	.footerContainer {
 		margin: 1rem 0;
 		font-size: 20px;
+	}
+	.main__header {
+		font-size: 3rem;
+	}
+	.sub__header {
+		font-size: 2rem;
+	}
+	.about__location,
+	.about__hours,
+	.about__contact {
+		margin: 1rem;
+		width: 33%;
+		word-wrap: normal;
 	}
 }
 @media screen and (min-width: 769px) and (max-width: 1024px) {
@@ -245,22 +330,34 @@ body {
 		border-bottom: 5px solid white;
 	}
 	.home__header {
-		width: 70%;
+		width: 40%;
 		position: absolute;
 		top: 25%;
-		left: 15%;
+		left: 30%;
 		border-radius: 0.5rem;
 		font-size: 48px;
+	}
+	.main__header {
+		font-size: 3.5rem;
+	}
+	.sub__header {
+		font-size: 2rem;
 	}
 	.footerContainer {
 		margin: 1rem 0;
 		font-size: 1.5rem;
 	}
-	.foodContainer{
+	.foodContainer {
 		width: 80%;
 	}
-	.beerContainer{
+	.beerContainer {
 		width: 80%;
+	}
+	.about__location,
+	.about__hours,
+	.about__contact {
+		margin: 1rem;
+		width: 33%;
 	}
 }
 @media screen and (min-width: 1025px) and (max-width: 1200px) {
@@ -283,14 +380,20 @@ body {
 		border-radius: 0.5rem;
 		font-size: 48px;
 	}
+	.main__header {
+		font-size: 4rem;
+	}
+	.sub__header {
+		font-size: 2rem;
+	}
 	.footerContainer {
 		margin: 20px 0;
 		font-size: 20px;
 	}
-	.foodContainer{
+	.foodContainer {
 		width: 70%;
 	}
-	.beerContainer{
+	.beerContainer {
 		width: 70%;
 	}
 }
@@ -307,21 +410,30 @@ body {
 		border-bottom: 5px solid white;
 	}
 	.home__header {
-		width: 50%;
+		width: 30%;
 		position: absolute;
 		top: 25%;
-		left: 25%;
+		left: 35%;
 		border-radius: 0.5rem;
 		font-size: 48px;
+	}
+	.main__header {
+		font-size: 4rem;
+	}
+	.sub__header {
+		font-size: 2.5rem;
 	}
 	.footerContainer {
 		margin: 20px 0;
 		font-size: 20px;
 	}
-	.foodContainer{
+	.foodContainer {
 		width: 60%;
 	}
-	.beerContainer{
+	.beerContainer {
 		width: 60%;
+	}
+	.aboutContainer {
+		width: 50%;
 	}
 }
